# fastApi-producthunt-scrape-and-embed-POC

./: README.md  loggers.conf  playground.ipynb  pyproject.toml
JupyterPlayGround/: scrapy_ph_test.ipynb
app/: .env  __init__.py  logger.py  main.py
app/alembic/: alembic.ini
app/alembic/versions/: 60f1581a7a82_add_isNew_column_mention.py  79809566f5c6_add_recommended_column_to_mention.py
app/api/: __init__.py  base_schema.py  router.py
app/api/docs/: __init__.py
app/api/dummy/: __init__.py  views.py
app/api/echo/: __init__.py  views.py
app/api/mentions/: schema.py  views.py
app/api/monitoring/: __init__.py
app/api/product_hunt/: schema.py  views.py
app/api/twitter/: schema.py  views.py
app/config/: database.py  openai.py  twitter.py
app/db/: base.py
app/db/dao/: dummy_dao.py  message_dao.py
app/db/models/: __init__.py  dummy_model.py  external_system_user_details.py  mention_model.py  message_model.py  message_semantics_model.py  source_system.py  user.py
app/db/repositories/: external_system_user_repo.py  mention_dao.py  source_system_dao.py
app/models/: foo.py  redditmodels.py
app/producthuntscraper/: scrapy.cfg
app/routers/: TopicQueryRouter.py  foo.py  redditRouter.py
app/schemas/: redditschema.py
app/services/: ExternalUserDetailsService.py  MentionsService.py  PineConeService.py  RedditService.py  SourceSystemService.py  TopicQueryService.py  foo.py  gpt3Service.py  main.py  pineConeService.py  pineconeService.py  product_hunt_service.py  redditService.py  twitter_service.py
app/utils/: app_exceptions.py
(+5 files in other folders)
