[tool.poetry]
name = "fictional-carnival"
version = "0.1.0"
description = ""
authors = ["Kye Moon <kyemoondevelopment@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.62.0"
loguru = "^0.5.3"
SQLAlchemy = "^2"
openai = "^0.26.1"
flake8 = "^6.0.0"
asyncpg = "^0.27.0"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
scrapy = "^2.8.0"
alembic = "^1.9.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
